[gd_scene load_steps=4 format=3 uid="uid://cpxome1m0hc5k"]

[ext_resource type="Script" path="res://components/store_action/store_action.gd" id="1_w4u18"]
[ext_resource type="PackedScene" uid="uid://bubyiypl7f8gi" path="res://components/action_component/action_component.tscn" id="2_oipf4"]
[ext_resource type="PackedScene" uid="uid://d1775i78g6ie7" path="res://components/name_attribute/name_attribute.tscn" id="3_e4uvy"]

[node name="StoreAction" type="Node"]
script = ExtResource("1_w4u18")

[node name="ActionComponent" parent="." instance=ExtResource("2_oipf4")]

[node name="NameAttribute" parent="." instance=ExtResource("3_e4uvy")]
basic_name = "存入"
